--- a/test.ipynb
+++ b/test.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -739,6 +739,228 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(960, 320)\n",
+      "(960, 320)\n",
+      "(960, 320)\n",
+      "(960, 320)\n",
+      "(960, 320)\n",
+      "(960, 320)\n",
+      "(960, 320)\n",
+      "(960, 320)\n",
+      "(960, 320)\n",
+      "(960, 320)\n",
+      "(960, 320)\n",
+      "(960, 320)\n",
+      "(960, 320)\n",
+      "(960, 320)\n",
+      "(960, 320)\n",
+      "(960, 320)\n",
+      "(960, 320)\n",
+      "(960, 320)\n",
+      "(960, 320)\n",
+      "(960, 320)\n",
+      "(960, 320)\n",
+      "(960, 320)\n",
+      "(960, 320)\n",
+      "(960, 320)\n",
+      "(960, 320)\n",
+      "(960, 320)\n",
+      "(960, 320)\n",
+      "(960, 320)\n",
+      "(960, 320)\n",
+      "(960, 320)\n",
+      "(960, 320)\n",
+      "(960, 320)\n",
+      "(960, 320)\n",
+      "(960, 320)\n",
+      "(960, 320)\n",
+      "(960, 320)\n",
+      "(960, 320)\n",
+      "(960, 320)\n",
+      "(960, 320)\n",
+      "(960, 320)\n",
+      "(960, 320)\n",
+      "(960, 320)\n",
+      "(960, 320)\n",
+      "(960, 320)\n",
+      "(960, 320)\n",
+      "(960, 320)\n",
+      "(960, 320)\n",
+      "(960, 320)\n",
+      "(960, 320)\n",
+      "(960, 320)\n",
+      "(960, 320)\n",
+      "(960, 320)\n",
+      "(960, 320)\n",
+      "(960, 320)\n",
+      "(960, 320)\n",
+      "(960, 320)\n",
+      "(960, 320)\n",
+      "(960, 320)\n",
+      "(960, 320)\n",
+      "(960, 320)\n",
+      "(960, 320)\n",
+      "(960, 320)\n",
+      "(960, 320)\n",
+      "(960, 320)\n",
+      "(960, 320)\n",
+      "(960, 320)\n",
+      "(960, 320)\n",
+      "(960, 320)\n",
+      "(960, 320)\n",
+      "(960, 320)\n",
+      "(960, 320)\n",
+      "(960, 320)\n",
+      "(960, 320)\n",
+      "(960, 320)\n",
+      "(960, 320)\n",
+      "(960, 320)\n",
+      "(960, 320)\n",
+      "(960, 320)\n",
+      "(960, 320)\n",
+      "(960, 320)\n",
+      "(960, 320)\n",
+      "(960, 320)\n",
+      "(960, 320)\n",
+      "(960, 320)\n",
+      "(960, 320)\n",
+      "(960, 320)\n",
+      "(960, 320)\n",
+      "(960, 320)\n",
+      "(960, 320)\n",
+      "(960, 320)\n",
+      "(960, 320)\n",
+      "(960, 320)\n",
+      "(960, 320)\n",
+      "(960, 320)\n",
+      "(960, 320)\n",
+      "(960, 320)\n",
+      "(960, 320)\n",
+      "(960, 320)\n",
+      "(960, 320)\n",
+      "(960, 320)\n",
+      "(960, 320)\n",
+      "(960, 320)\n",
+      "(960, 320)\n",
+      "(960, 320)\n",
+      "(960, 320)\n",
+      "(960, 320)\n",
+      "(960, 320)\n",
+      "(960, 320)\n",
+      "(960, 320)\n",
+      "(960, 320)\n",
+      "(960, 320)\n",
+      "(960, 320)\n",
+      "(960, 320)\n",
+      "(960, 320)\n",
+      "(960, 320)\n",
+      "(960, 320)\n",
+      "(960, 320)\n",
+      "(960, 320)\n",
+      "(960, 320)\n",
+      "(960, 320)\n",
+      "(960, 320)\n",
+      "(960, 320)\n",
+      "(960, 320)\n",
+      "(960, 320)\n",
+      "(960, 320)\n",
+      "(960, 320)\n",
+      "(960, 320)\n",
+      "(960, 320)\n",
+      "(960, 320)\n",
+      "(960, 320)\n",
+      "(960, 320)\n",
+      "(960, 320)\n",
+      "(960, 320)\n",
+      "(960, 320)\n",
+      "(960, 320)\n",
+      "(960, 320)\n",
+      "(960, 320)\n",
+      "(960, 320)\n",
+      "(960, 320)\n",
+      "(960, 320)\n",
+      "(960, 320)\n",
+      "(960, 320)\n",
+      "(960, 320)\n",
+      "(960, 320)\n",
+      "(960, 320)\n",
+      "(960, 320)\n",
+      "(960, 320)\n",
+      "(960, 320)\n",
+      "(960, 320)\n",
+      "(960, 320)\n",
+      "(960, 320)\n",
+      "(960, 320)\n",
+      "(960, 320)\n",
+      "(960, 320)\n",
+      "(960, 320)\n",
+      "(960, 320)\n",
+      "(960, 320)\n",
+      "(960, 320)\n",
+      "(960, 320)\n",
+      "(960, 320)\n",
+      "(960, 320)\n",
+      "(960, 320)\n",
+      "(960, 320)\n",
+      "(960, 320)\n",
+      "(960, 320)\n",
+      "(960, 320)\n",
+      "(960, 320)\n",
+      "(960, 320)\n",
+      "(960, 320)\n",
+      "(960, 320)\n",
+      "(960, 320)\n",
+      "(960, 320)\n",
+      "(960, 320)\n",
+      "(960, 320)\n",
+      "(960, 320)\n",
+      "(960, 320)\n",
+      "(960, 320)\n",
+      "(960, 320)\n",
+      "(960, 320)\n",
+      "(960, 320)\n",
+      "(960, 320)\n",
+      "(960, 320)\n",
+      "(960, 320)\n",
+      "(960, 320)\n",
+      "(960, 320)\n",
+      "(960, 320)\n",
+      "(960, 320)\n",
+      "(960, 320)\n",
+      "(960, 320)\n",
+      "(960, 320)\n",
+      "(960, 320)\n",
+      "(960, 320)\n",
+      "(960, 320)\n",
+      "(960, 320)\n",
+      "(960, 320)\n",
+      "(960, 320)\n",
+      "(960, 320)\n",
+      "(960, 320)\n",
+      "(960, 320)\n",
+      "(960, 320)\n"
+     ]
+    }
+   ],
+   "source": [
+    "X = []\n",
+    "y = []\n",
+    "for i in range(100):\n",
+    "    X_inst = np.load(f'./2d_dataset/data/Xy_{i}.npy')[0]\n",
+    "    y_inst = np.load(f'./2d_dataset/data/Xy_{i}.npy')[1]\n",
+    "    print(X_inst.shape)\n",
+    "    print(y_inst.shape) "
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
@@ -761,7 +983,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.6"
+   "version": "3.10.13"
   }
  },
  "nbformat": 4,
