--- a/data/Augmentaton.ipynb
+++ b/data/Augmentaton.ipynb
@@ -7,6 +7,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "'''\n",
+    "Augmentation code, did not use for training.\n",
+    "'''\n",
+    "\n",
     "import numpy as np\n",
     "import imgaug.augmenters as iaa\n",
     "import matplotlib.pyplot as plt\n",
