--- a/test/test.ipynb
+++ b/test/test.ipynb
@@ -6,6 +6,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# MOSTLY PROTOTYPING AND INITAL DATA EXPLORATION, very dirty\n",
+    "\n",
     "from glob import glob\n",
     "import os\n",
     "import pydicom as dicom\n",
@@ -13,7 +15,6 @@
     "import numpy as np\n",
     "from pathlib import Path\n",
     "import matplotlib.pyplot as plt\n",
-    "\n",
     "import torch\n",
     "import torch.nn as nn\n",
     "from torch.utils.data import Dataset, DataLoader\n",
